# Blog_Platform

./: .a.c.swp  Untitled Diagram.drawio  details.txt  docker-compose.yml  user1.py  user2.py  user3.py  user4.py  user5.py  users.txt
Assignment/: AST.txt  a.out  assign-1_test-1_invalid.c  assign-1_test-2_invalid.c  assignment-1_nested_do_while_valid.c  assignment-1_simple_for_valid.c  ex.c  lex.yy.c  lexer.l  parser  parser.tab.c  parser.tab.h  parser.y  sym_tab.c  sym_tab.h  test.c  y.tab.c  y.tab.h
Projects/LungXSim/: index.html  package-lock.json  package.json
Projects/LungXSim/src/css/: style.css
Projects/LungXSim/src/js/: threeApp.js  ui.js
backend/auth/: pom.xml
backend/blog/: pom.xml
backend/recommendation/: Dockerfile  pom.xml
backend/recommendation/init-scripts/: init.sql
backend/rough/: pom.xml
frontend/blog_platform_frontend/: README.md  package-lock.json  package.json
frontend/blog_platform_frontend/app/: globals.css
frontend/blog_platform_frontend/app/create/: page.tsx
frontend/project/: Dockerfile  middleware.ts
frontend/project/app/: layout.tsx  page.tsx
frontend/project/app/home/: page.tsx
frontend/project/app/profile/: page.tsx
frontend/project/components/: BlogList.tsx  CreateBlogDialog.tsx  EditBlogDialog.tsx  Header.tsx  SearchHeader.tsx  SimilarBlogs.tsx  TopicSelector.tsx
frontend/project/context/: AuthContext.tsx
frontend/project/lib/: apiService.ts  constants.ts  types.ts
rl/: CMakeLists.txt  package.xml  trained_dqn_model.pth
rl/launch/: sim_launch.py
rl/scripts/: maze_sime_node.py
(+33 files in other folders)
